{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 21,
  "lineage": "904037ad-cdb1-a956-445a-c0582b4f4ef1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec8d2f71ede51af0",
            "arn": "arn:aws:ec2:ap-south-1:165835313278:elastic-ip/eipalloc-0ec8d2f71ede51af0",
            "domain": "vpc",
            "id": "eipalloc-0ec8d2f71ede51af0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-30-50.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.30.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:165835313278:instance/i-00783c33a3bd1cb0f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00783c33a3bd1cb0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5767bbb7e79fa21",
            "private_dns": "ip-10-0-3-26.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a38bc67a979847f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3902c39a43371df",
            "tags": {
              "Name": "private-ec2-a"
            },
            "tags_all": {
              "Name": "private-ec2-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f22b51e2d623dd3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.private_SG",
            "aws_security_group.public_SG",
            "aws_subnet.private_SN",
            "aws_vpc.Test_VPC"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:165835313278:instance/i-08b9389d515cb7ef2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b9389d515cb7ef2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d01d647462db6c4c",
            "private_dns": "ip-10-0-4-44.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0084f37b04924e0b4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bba5019a216c765e",
            "tags": {
              "Name": "private-ec2-b"
            },
            "tags_all": {
              "Name": "private-ec2-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f22b51e2d623dd3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.private_SG",
            "aws_security_group.public_SG",
            "aws_subnet.private_SN",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:165835313278:instance/i-012bcc7cb96429dea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012bcc7cb96429dea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b03d72458ccd6980",
            "private_dns": "ip-10-0-0-80.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.80",
            "public_dns": "ec2-65-2-38-168.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.38.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a518f3b6d5138564",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026c64676565d0e0d",
            "tags": {
              "Name": "public-ec2-a"
            },
            "tags_all": {
              "Name": "public-ec2-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010183b531e228d1b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_SG",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:165835313278:instance/i-0672e8e19f0be6cb2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0672e8e19f0be6cb2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9f478f7010c9587",
            "private_dns": "ip-10-0-1-104.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-65-0-109-124.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.109.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09af1554a8a07f50d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b504b7a7e3f6f78b",
            "tags": {
              "Name": "public-ec2-b"
            },
            "tags_all": {
              "Name": "public-ec2-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010183b531e228d1b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_SG",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Testing_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:internet-gateway/igw-099e70bb3cc022c66",
            "id": "igw-099e70bb3cc022c66",
            "owner_id": "165835313278",
            "tags": {
              "Name": "Learning_IGW"
            },
            "tags_all": {
              "Name": "Learning_IGW"
            },
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec8d2f71ede51af0",
            "association_id": "eipassoc-0a414640ca42b7f6d",
            "connectivity_type": "public",
            "id": "nat-03a158a7ec472d37d",
            "network_interface_id": "eni-0baad134a48bf97ba",
            "private_ip": "10.0.0.5",
            "public_ip": "3.109.30.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-026c64676565d0e0d",
            "tags": {
              "Name": "Learning_NAT_GW"
            },
            "tags_all": {
              "Name": "Learning_NAT_GW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.Testing_IGW",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Learning_Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:route-table/rtb-0892157427cad6bf6",
            "id": "rtb-0892157427cad6bf6",
            "owner_id": "165835313278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a158a7ec472d37d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Learning_Private_RT"
            },
            "tags_all": {
              "Name": "Learning_Private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.Testing_IGW",
            "aws_nat_gateway.nat",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:route-table/rtb-0d45178bd2c5ea2e8",
            "id": "rtb-0d45178bd2c5ea2e8",
            "owner_id": "165835313278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099e70bb3cc022c66",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Learning_Public_RT"
            },
            "tags_all": {
              "Name": "Learning_Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Testing_IGW",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0149fde586e63d652",
            "route_table_id": "rtb-0892157427cad6bf6",
            "subnet_id": "subnet-0c3902c39a43371df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.Testing_IGW",
            "aws_nat_gateway.nat",
            "aws_route_table.Learning_Private_RT",
            "aws_subnet.private_SN",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e4055e21eb43fbd",
            "route_table_id": "rtb-0892157427cad6bf6",
            "subnet_id": "subnet-0bba5019a216c765e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.Testing_IGW",
            "aws_nat_gateway.nat",
            "aws_route_table.Learning_Private_RT",
            "aws_subnet.private_SN",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058b49ca2dac628b7",
            "route_table_id": "rtb-0d45178bd2c5ea2e8",
            "subnet_id": "subnet-026c64676565d0e0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Testing_IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0bb862904b75dcb",
            "route_table_id": "rtb-0d45178bd2c5ea2e8",
            "subnet_id": "subnet-0b504b7a7e3f6f78b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Testing_IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.public_SN",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:security-group/sg-05f22b51e2d623dd3",
            "description": "Allow HTTP from Public_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f22b51e2d623dd3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSh from public_SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010183b531e228d1b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Learning_Private_SG",
            "name_prefix": "",
            "owner_id": "165835313278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Learning_Private_SG"
            },
            "tags_all": {
              "Name": "Learning_Private_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_SG",
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:security-group/sg-010183b531e228d1b",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010183b531e228d1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Learning_Public_SG",
            "name_prefix": "",
            "owner_id": "165835313278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Learning_Public_SG"
            },
            "tags_all": {
              "Name": "Learning_Public_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:subnet/subnet-0c3902c39a43371df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3902c39a43371df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165835313278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning_Subnet_a"
            },
            "tags_all": {
              "Name": "Learning_Subnet_a"
            },
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Test_VPC"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:subnet/subnet-0bba5019a216c765e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bba5019a216c765e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165835313278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning_Subnet_b"
            },
            "tags_all": {
              "Name": "Learning_Subnet_b"
            },
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:subnet/subnet-026c64676565d0e0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026c64676565d0e0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "165835313278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning_Subnet_a"
            },
            "tags_all": {
              "Name": "Learning_Subnet_a"
            },
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Test_VPC"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:subnet/subnet-0b504b7a7e3f6f78b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b504b7a7e3f6f78b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "165835313278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning_Subnet_b"
            },
            "tags_all": {
              "Name": "Learning_Subnet_b"
            },
            "vpc_id": "vpc-09c596aca8c75c16b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Test_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Test_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165835313278:vpc/vpc-09c596aca8c75c16b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0ac5ea4d8ccb1892d",
            "default_route_table_id": "rtb-0cee48cf5b08636ab",
            "default_security_group_id": "sg-0ee287039b2918f8f",
            "dhcp_options_id": "dopt-0ec99f96d4cfee23b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c596aca8c75c16b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cee48cf5b08636ab",
            "owner_id": "165835313278",
            "tags": {
              "Name": "Learninng_VPC"
            },
            "tags_all": {
              "Name": "Learninng_VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}